# smart-mirror-tui

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  foot.ini  install-service.sh  pyproject.toml  smart-mirror.service.example  start-mirror.sh
.github/: copilot-instructions.md
docs/: CALENDAR_CARD.md  CSS_STYLING.md  TRANSPORT_CARD.md
smart_mirror/: __init__.py  __main__.py
smart_mirror/core/: __init__.py  app.py  widgets.py
smart_mirror/plugins/: __init__.py  base.py  calendar.py  clock.py  greeter.py  qlik_menu.py  transport.py  weather.py
smart_mirror/services/: pir_controller.py  pir_sensor.py  screen_manager.py
tests/: conftest.py  test_app.py  test_calendar_card.py  test_cards.py  test_imports.py  test_pir_controller.py  test_plugins.py  test_transport_card.py
